# HFT-Orderbook

./: .gitignore  CMakeLists.txt  README.md  build.zig
.github/workflows/: zig.yml
src/: benchmark.c  binance.cpp  main.c  performance.c  viz.cpp
